# rmath

./: .env.example  .gitignore  Cargo.toml  DOCS.md  LICENSE  README.md  critique_done_for_rmath.txt  fix_data.py  fix_data_smart.py  new  plan.md  pyproject.toml
.github/workflows/: CI.yml  ci.yml  pages.yml  publish.yml
benchmarks/: benchmark_array.py  benchmark_calculus.py  benchmark_fusion.py  benchmark_geometry.py  benchmark_optimizers.py  benchmark_scalar.py  benchmark_scalar_analysis.md  benchmark_signal.py  benchmark_stats.py  benchmark_tensor.py  benchmark_vector.py  benchmark_vector_analysis.md  linkedin_preview.md
benchmarks/pipeline/: numpy_pipeline.py  rmath_pipeline.py
comparison_test/: bench_stats.py  bench_vector.py  benchmark_full.txt  benchmark_torch.txt  test_broadcasting.py  test_ml_batch_norm.py  test_ml_covariance.py  test_ml_simple.py  test_ptr_chaining.py  test_ptr_heavy.py  test_ptr_signal.py  test_pytorch_batch_norm.py  test_pytorch_compare.py  test_pytorch_covariance.py  test_rmath_chaining.py  test_rmath_heavy.py  test_rmath_signal.py  test_zero_loop.py
docs/portal/: array.html  benchmarks.html  calculus.html  constants.html  foundations.html  geometry.html  index.html  install.html  interop.html  linalg.html  nn.html  quickstart.html  scalar.html  script.js  signal.html  special.html  stats.html  style.css  tensor.html  theory.html  vector.html
projects/: student_analysis.py
projects/rmath_cli/: main.py  run.md  run_cli.py
projects/rmath_cli/commands/: analysis.py  engineering.py  generator.py  geometry.py  stats.py
projects/rmath_cli/utils/: formatter.py
py_test/: test_rmath_array.py  test_rmath_scalar.py  test_rmath_stats.py  test_rmath_vector.py
rmath/: __init__.py  __init__.pyi  array.pyi  calculus.pyi  constants.pyi  linalg.pyi  rmath.pyi  signal.pyi  vector.pyi
rmath/array/: __init__.py  __init__.pyi
rmath/calculus/: __init__.py  __init__.pyi
rmath/constants/: __init__.py
rmath/geometry/: __init__.py  __init__.pyi
rmath/linalg/: __init__.py  __init__.pyi
rmath/nn/: __init__.py  __init__.pyi
rmath/scalar/: __init__.py  __init__.pyi
rmath/signal/: __init__.py  __init__.pyi  __init__.py宣
rmath/special/: __init__.py  __init__.pyi
rmath/stats/: __init__.py  __init__.pyi
rmath/vector/: __init__.py  __init__.pyi
scratch/: test_all_domains.py  test_chatgpt_examples.py  test_readme.py  test_torch.py  verify_all_fixes.py
src/: constants.rs  lib.rs  special.rs
src/array/: autograd.rs  core.rs  interop.rs  io.rs  lazy.rs  linalg.rs  ml.rs  mod.rs  ops.rs  optimizers.rs
src/calculus/: dual.rs  integration.rs  mod.rs  solver.rs
src/geometry/: mod.rs  topology.rs  transforms.rs
src/old/: array.rs  geometry.rs  geometry_v1.rs  mod.rs  scalar_v1.rs  signal_v1.rs  stats_v1.rs  vector_v1.rs
src/old/scalar/: complex.rs  core.rs  math.rs  mod.rs  ops.rs  pipeline.rs
src/scalar/: complex.rs  core.rs  math.rs  mod.rs  ops.rs  pipeline.rs
src/signal/: convolution.rs  fft.rs  mod.rs
src/stats/: descriptive.rs  distributions.rs  inferential.rs  mod.rs  regression.rs
src/vector/: complex.rs  core.rs  mod.rs  ops.rs
test/: demonstrate_vector.py  final_benchmark.py  test1.py  test_scalar.py  test_stats.py  test_vector.py
