[package]
name = "rmath"
version = "0.1.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_rmath"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module", "anyhow", "multiple-pymethods"] }
rayon = "1.10"
numpy = "0.23"
matrixmultiply = "0.3"
statrs = "0.18"
faer = { version = "0.21", features = ["rayon"] }
num-complex = "0.4"
rand = "0.8"
rand_distr = "0.4"
multiversion = "0.7"
anyhow = "1.0"
memmap2 = "0.9"
safetensors = "0.4"
rustfft = "6.1"
once_cell = "1.18"
sys-info = "0.9"

[profile.release]
opt-level = 3          # Maximum speed
lto = "fat"            # Extensive Link Time Optimization
codegen-units = 1      # Better optimizations (but slower build)
panic = "abort"        # Reduce binary size/overhead
strip = "symbols"      # Remove unnecessary symbols
incremental = false    # Better for final production builds
