[build-system]
requires = ["maturin>=1.12,<2.0"]
build-backend = "maturin"

[project]
name = "rmath-py"
description = "High-performance numerical toolkit backed by Rust"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "USER-PC", email = "your.email@example.com" }
]
keywords = ["numerical", "math", "rust", "numpy", "performance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = []
dynamic = ["version"]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "rmath._rmath"
