[build-system]
requires = ["maturin>=1.12,<2.0"]
build-backend = "maturin"

[project]
name = "rmath-py"
description = "Drop-in numerical accelerator for Python, powered by Rust."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    { name = "Ay-developer", email = "ayomideadediran45@gmail.com" }
]
keywords = ["numerical", "math", "rust", "numpy", "performance", "parallel", "linear-algebra"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]
dependencies = []
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/Ay-developerweb/rmath"
Documentation = "https://ay-developerweb.github.io/rmath/portal/"
Repository = "https://github.com/Ay-developerweb/rmath"
Issues = "https://github.com/Ay-developerweb/rmath/issues"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "rmath._rmath"
